syntax = "proto3";

option csharp_namespace = "Inventory.Grpc.Protos";


service Existence
{
	rpc checkExistence (productRequest) returns (productEcistenceReply);
}


message productRequest
{
   string id = 1;
}

message productEcistenceReply
{
  int32 productQty = 1;
}